<resources>
    <string name="screen_label">Popular Movies</string>
    <string name="screen_label_detail">Movie Details</string>
    <string name="sort_by">Sort By</string>
    <string name="popularity">Popularity</string>
    <string name="rating">Rating</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="image">Movie Image</string>
    <string name="title">Title :</string>
    <string name="overview">Overview :</string>
    <string name="user_ratings">User Ratings :</string>
    <string name="release_date">Release Date :</string>
    <string name="save_as_favorite">Save As Favorite</string>
    <string name="remove_from_favorite">Remove From Favorite</string>
    <string name="my_favorite_movies">My Favorite Movies</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="author_title">Author : </string>
    <string name="comments">Comment : </string>
</resources>
