<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sort_by"
        android:orderInCategory="100"
        android:title="@string/sort_by"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/popularity"
                android:title="@string/popularity"

                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/rating"
                android:title="@string/rating"

                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/favorite_movies"
                android:title="@string/my_favorite_movies"

                app:showAsAction="ifRoom"/>
        </menu>
    </item>
</menu>