<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/detail_movie_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.android.popularmoviesstage1sumita.DetailActivity">


        <ImageView
            android:id="@+id/poster"
            android:layout_width="276dp"
            android:layout_height="355dp"
            android:layout_gravity="center"
            android:layout_marginLeft="288dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/movie_poster"
            android:scaleType="fitXY"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"/>

        <Button
            android:id="@+id/favorite_movie"
            android:layout_width="78dp"
            android:layout_height="62dp"
            android:layout_margin="5dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:background="@color/strawberry"
            android:gravity="center"
            android:onClick="saveAsFavorite"
            android:text="@string/save_as_favorite"
            android:visibility="visible"
            app:layout_constraintHorizontal_bias="0.111"
            app:layout_constraintLeft_toRightOf="@+id/poster"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="89dp"
            android:background="@color/aquaBlue"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="italic"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:textStyle="bold"/>

        <TextView
            android:id="@+id/synopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="27dp"
            android:padding="20dp"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poster"/>


        <TextView
            android:id="@+id/user_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="45dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="15sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/poster"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/release_date"/>

        <TextView
            android:id="@+id/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@+id/poster"
            app:layout_constraintTop_toBottomOf="@+id/favorite_movie"/>

        <TextView
            android:id="@+id/trailer_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="39dp"
            android:ems="10"
            android:paddingTop="50dp"
            android:text="@string/trailers"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/synopsis"/>

        <LinearLayout
            android:id="@+id/movie_video"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="25dp"
            android:horizontalSpacing="70dp"
            android:orientation="vertical"
            android:verticalSpacing="70dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trailer_title">

        </LinearLayout>

        <TextView
            android:id="@+id/review_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="40dp"
            android:paddingTop="50dp"
            android:text="@string/reviews"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_video"/>

        <LinearLayout
            android:id="@+id/movie_review"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/review_title">

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</ScrollView>